# EidollonaONE.io

./: .gitattributes  .gitignore  .gitignore.bak  .ignore  .pre-commit-config.yaml  AVATAR_SYSTEM_STATUS.md  EMP_GUARD_STATUS.md  ETHICS.md  LICENSE  OPERATOR.md  Procfile  README.md  SOLAR_FLARE_DEPLOYMENT.md  STATUS.md  deep_diagnostic.py  duplicate_audit_report.json  electromagnetic_consciousness.py  electromagnetic_integration.py  make_project_fingerprint.py  manage.py  project_tree.txt  project_tree_20251014.txt  pyproject.toml  pyright_report.txt  pyrightconfig.json  pytest.ini  quick_assimilation.py  railway.json  render.yaml  serve_web.py  silent_rpm_test.py  temp_calc.py
ai_core/: __init__.py  ai_agent.py  ai_awareness.py  ai_brain.py  probabilistic_rendering_engine.py  sovereignty_engine.py  trading_bots_alias.py  types.py
ai_learning/: __init__.py  ai_memory_manager.py  learning_metrics.py  model_evolver.py  self_coder.py
algorithms/: __init__.py
autonomous_governance/: governance_protocols.py
avatar/: __init__.py  avatar_creation.py  avatar_system.py  reactive_layer.py  registry.py
avatar_data/: avatar_data.py  symbolic_seed.json
awakening_sequence/: avatar_interactivity.py
backups/: README.md  snapshot_manifest.py
black_scholes/: __init__.py  black_scholes_model.py  black_scholes_pde.py
blockchain/: chain_metrics.py
bots/: __init__.py  arb_detector.py  audit_rollup.py  bandit_alloc.py  base_se_bot.py  court_explainer.py  latency_guard.py  maker_tuner.py  options_greeks.py  pair_sieve.py  rebalancer.py  regime_sentinel.py  registry.py  risk_sentinel.py  se_contract.py  se_decorators.py  slippage_cal.py
bridge/: alpha_tap.py
citadel/: court_yard.py  router.py
cluster/: README.md  __init__.py  cluster_control.py  job_spec.py  presets.py
cognition/: ser_utils.py  ser_writer.py
common/: audit_chain.py  capabilities.py  readiness.py  safe_mode.py
compliance_auditor_data/: compliance_auditor_data.py  symbolic_seed.json
config/: avatars.yml  bots.yml  citadel.yml  kpi_thresholds.yml  qre.yml  se.yml  se42.yml  se43.yml  time_lens.yml  trading_policy_crypto.yml
connection/: __init__.py  credential_manager.py  encryption_layer.py  identity_verifier.py  wifi_connector.py
connection_data/: connection_data.py  symbolic_seed.json
consciousness/: consciousness.py  symbolic_seed.json
consciousness_broadcast/: broadcast_controller.py
consciousness_core/: __init__.py  eidollona_consciousness.py
consciousness_data/: consciousness_data.py  symbolic_seed.json
consciousness_engine/: consciousness_awakening.py  scheduler.py
dashboard/: __init__.py  cognition_insights.py  dashboard_logger.py  symbolic_dashboard.py  symbolic_dashboard_api.py
docs/: AVATAR_PREVIEW.md  AVATAR_SCAN.md  RUNBOOK_TIME_LENS.md  SYSTEM_PROMPT_SE43.md  TIME_LENS.md  social_adapters.md  trader_avatar.md
eidollona_optimizer/: optimizer.py
emp/: __init__.py  (+3 more)
(+882 files in other folders)
