[project]
name = "eidollona-one"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []
description = "EidollonaONE Core Modules"
authors = [ { name = "Eidollona" } ]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_core*","connection*","symbolic_core*","autonomous_governance*","master_key*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
	"asyncio: mark tests that use asyncio so they don't warn when plugin isn't present",
	"ai_eval: mark tests that exercise the ai_learning evaluation harness",
]
filterwarnings = [
	# Silence legacy import shim deprecation that we are phasing out
	"ignore:ai_core.trading_bots is deprecated:DeprecationWarning",
	# FastAPI on_event deprecation may surface from vendored or optional modules
	"ignore:on_event is deprecated, use lifespan event handlers instead.:DeprecationWarning",
	# Pydantic v2 deprecations for class-based Config in third-party/legacy paths
	"ignore:Support for class-based `config` is deprecated, use ConfigDict instead:DeprecationWarning",
	# Pytest warnings for async tests without plugin; tests still pass
	"ignore::pytest.PytestUnknownMarkWarning",
	"ignore::pytest.PytestUnhandledCoroutineWarning",
]

[tool.ruff]
line-length = 160
target-version = "py39"
exclude = [
	"eidollona_env",
	"quantum_env",
	"**/site-packages/**",
]

[tool.ruff.lint]
extend-select = ["E","F"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"symbolic_core/symbolic_equation.py" = ["E402"]
"consciousness_engine/scheduler.py" = ["E402"]
"ai_core/trading_bots_alias.py" = ["F403"]
"web_interface/backend/main.py" = ["E722","F811"]
"web_planning/backend/dashboard/__init__.py" = ["E402"]
"web_planning/backend/reveal/emoji_channel.py" = ["E402"]
